error.txt

C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052>gradlew build

> Task :architectureReview

===============================================================
================ PEER REVIEW AUTOMATIZADO ====================
===============================================================

≡ƒôü Proyecto: tnd-msa-sp-orqclientes0052
≡ƒôè Threshold Configurado: 7 / 10

---------------------------------------------------------------
≡ƒÅù∩╕Å  ARQUITECTURA:
   Estilo detectado: UNKNOWN
   Archivos analizados: 33
   Paquetes encontrados: 8
   Java 21: Γ£à

   ≡ƒôè Desglose de puntos:
      ΓÇó Arquitectura: 4 / 5
      ΓÇó Paquetes: 2 / 4
      ΓÇó Nomenclatura: 5 / 7
      ΓÇó Archivos requeridos: 2 / 2

   Puntaje final: 7.6 / 10
   BLOQUEAR PR: NO Γ£à

   Γ£à Todos los archivos requeridos est├ín presentes

   ≡ƒôï Observaciones generales (1):
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.exception': 'ErrorCatalogConstants' | Archivo: ErrorCatalogConstants.java

   Γ£à Arquitectura aprobada

---------------------------------------------------------------
≡ƒº¬ PRUEBAS UNITARIAS:
   Archivos de test analizados: 0

   Γ¥î ERROR: No se encontraron archivos de pruebas unitarias
   El proyecto DEBE tener pruebas unitarias en src/test/java

   Puntaje final: 0 / 10
   BLOQUEAR PR: SI Γ¥î

   ΓÜá∩╕Å  El proyecto NO tiene pruebas unitarias - Esto es OBLIGATORIO

===============================================================

ΓÜá∩╕Å        PEER REVIEW - ADVERTENCIAS DETECTADAS         ΓÜá∩╕Å

   ΓÜá∩╕Å  Pruebas Unitarias: NO EXISTEN - El proyecto DEBE tener pruebas unitarias

Por favor, revisa y corrige los problemas antes de continuar.

ΓÜá∩╕Å    PEER REVIEW COMPLETADO CON ADVERTENCIAS     ΓÜá∩╕Å


> Task :generateJavaFromWsdl
Generando clases desde: ORQClientes0052.wsdl
   Γ£ô Usando binding global: jaxb-bindings.xml
SLF4J(W): No SLF4J providers were found.
SLF4J(W): Defaulting to no-operation (NOP) logger implementation
SLF4J(W): See https://www.slf4j.org/codes.html#noProviders for further details.
Loading FrontEnd jaxws ...
Loading DataBinding jaxb ...
wsdl2java -d C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\build\generated\sources\wsdl -p com.pichincha.sp.generated -verbose -autoNameResolution -xjc-enableIntrospection -xjc-XautoNameResolution -exsh true -mark-generated -b C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\gradle\wrapper\jaxb-bindings.xml C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\resources\legacy\ORQClientes0052.wsdl
wsdl2java - Apache CXF 4.1.1


> Task :postProcessGeneratedWsdl
Γ£à Post-procesamiento unificado completado

> Task :compileJava
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:19: error: cannot find symbol
    private List<CardDto> cards;
                 ^
  symbol:   class CardDto
  location: class FlowResponseDto
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:19: error: cannot find symbol
    private List<CardDto> cards;
                          ^
  symbol:   class CardDto
  location: class FlowResponseDto
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:13: error: cannot find symbol
@Setter
^
  symbol:   class CardDto
  location: class FlowResponseDto
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:16: error: cannot find symbol
@AllArgsConstructor
^
  symbol:   class CardDto
  location: class FlowResponseDto
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:14: error: cannot find symbol
@Builder
^
  symbol:   class CardDto
  location: class FlowResponseDtoBuilder
5 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/darochar/Documents/pruebas/tnd-msa-sp-orqclientes0052/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:19: error: cannot find symbol
      private List<CardDto> cards;
                   ^
    symbol:   class CardDto
    location: class FlowResponseDto
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:19: error: cannot find symbol
      private List<CardDto> cards;
                            ^
    symbol:   class CardDto
    location: class FlowResponseDto
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:13: error: cannot find symbol
  @Setter
  ^
    symbol:   class CardDto
    location: class FlowResponseDto
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:16: error: cannot find symbol
  @AllArgsConstructor
  ^
    symbol:   class CardDto
    location: class FlowResponseDto
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\domain\dto\FlowResponseDto.java:14: error: cannot find symbol
  @Builder
  ^
    symbol:   class CardDto
    location: class FlowResponseDtoBuilder
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
5 actionable tasks: 5 executed
